Fix the Loan amount breaking on mobile

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -366,6 +366,13 @@
     color: #26b6e8;
     padding: 1px 5px;
   }
+
+  #lend-button-wrapper{
+    .button{
+      padding-right: 1.4rem;
+      padding-left: 1.4rem;
+    }
+  }
 }
 
 #basket-button {
